--- a/app/src/main/res/layout/view_marker_notify.xml
+++ b/app/src/main/res/layout/view_marker_notify.xml
@@ -4,7 +4,7 @@
     android:id="@+id/ll_marker_des"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/WhiteAlpha"
+    android:background="#c3ffffff"
     android:orientation="vertical"
     android:padding="5dp">
 
