--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,7 @@
     android:fitsSystemWindows="true">
 
     <LinearLayout
+        android:id="@+id/Login_Main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -22,7 +23,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center"
             android:text="@string/eagleeyes"
-            android:textSize="30sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <TextView
@@ -32,7 +33,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center"
             android:text="@string/login"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -88,14 +89,50 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
-            android:text="@string/login" />
+            android:text="@string/login"
+            android:textAllCaps="false" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Hoặc" />
+
+        <TextView
+            android:id="@+id/txtv_Login_Session"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="8dp"
+            android:text="Login with session"
+            android:textColor="@color/colorPrimary" />
 
     </LinearLayout>
+
+    <include
+        layout="@layout/layout_login_session"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
     <include
         layout="@layout/view_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/txtv_Version"
+        android:layout_centerHorizontal="true"
+        android:text="@string/dmcl"
+        android:textColor="@color/White"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/txtv_Version"
@@ -105,5 +142,6 @@
         android:layout_centerHorizontal="true"
         android:text="Version"
         android:textColor="@color/White"
-        android:textStyle="bold" />
+        android:textSize="12sp"
+        android:textStyle="normal" />
 </RelativeLayout>
