--- a/app/src/main/res/layout/activity_main_map.xml
+++ b/app/src/main/res/layout/activity_main_map.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main_map"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/toolbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <include layout="@layout/toolbar" />
+    </android.support.v7.widget.CardView>
+
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/toolbar_layout">
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -33,16 +43,19 @@
                 android:textSize="20sp"
                 android:visibility="gone" />
 
-            <ImageView
-                android:id="@+id/iv_photo"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_TakePhoto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginBottom="100dp"
-                android:src="@drawable/ic_camera"
-                android:visibility="gone" />
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:clickable="true"
+                android:focusable="true"
+                app:srcCompat="@drawable/ic_camera" />
 
             <include
                 layout="@layout/view_marker_notify"
